# imx296_for_nvidia

./: README.md
Jetson_Nano_P3450/: build_kernel.sh  linux-4.9-Jetson-Nano-DTS-IMX296.patch  linux-4.9-Jetson-Nano-IMX296.patch  linux-4.9-Jetson-Nano-Y10.patch
Jetson_Nano_P3450/Linux_for_Tegra/source/public/hardware/nvidia/platform/t210/porg/kernel-dts/: tegra210-porg-p3448-common.dtsi
Jetson_Nano_P3450/Linux_for_Tegra/source/public/hardware/nvidia/platform/t210/porg/kernel-dts/porg-platforms/: tegra210-porg-camera-dual-imx296.dtsi
Jetson_Nano_P3450/Linux_for_Tegra/source/public/hardware/nvidia/platform/t210/porg/kernel-dts/porg-plugin-manager/: tegra210-porg-plugin-manager.dtsi
Jetson_Nano_P3450/Linux_for_Tegra/source/public/kernel/nvidia/drivers/media/i2c/: Kconfig  Makefile  imx296.c
Jetson_Nano_P3450/Linux_for_Tegra/source/public/kernel/nvidia/drivers/media/platform/tegra/camera/: camera_common.c  sensor_common.c
Jetson_Nano_P3450/Linux_for_Tegra/source/public/kernel/nvidia/drivers/media/platform/tegra/camera/vi/: vi2_formats.h
soft/v4l2_cuda_gist/: CMakeLists.txt  Device.cpp  Device.h  LOG.h  MemAlloc.cpp  MemAlloc.h  ProcessImage.cpp  ProcessImage.h  histogram.cu  histogram.cuh  main.cpp
